# motion_laas

laas_motion_plan_execute/: CMakeLists.txt  motion_parameters.yaml  package.xml
laas_motion_plan_execute/include/laas_motion_plan_execute/: gtp_bridge.h  pr2motion_bridge.h
laas_motion_plan_execute/launch/: laas_motion.launch
laas_motion_plan_execute/scripts/: test_motion.py
laas_motion_plan_execute/src/: gtp_bridge.cpp  laas_motion_plan_execute.cpp  pr2motion_bridge.cpp
